restrict vanilla 2.0 stuff (except railgun), some other unused blocks

--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -10669,7 +10669,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10681,7 +10681,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10693,7 +10693,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10705,7 +10705,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10717,7 +10717,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10729,7 +10729,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10753,7 +10753,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10765,7 +10765,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14327,6 +14327,138 @@
       <Type>MyObjectBuilder_Collector/BlinkDriveLarge</Type>
       <PlayerMaxCount>0</PlayerMaxCount>
       <GridMaxCount>1</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/HeavyBolterSmall</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/HeavyBolterSmallSponson</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/HeavyBolterLargeSponson</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/Lascannon</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/BattleCannon</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>false</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/PlasmaCannon</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/EarthshakerCannon</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/FluxArcLarge</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/FluxArcSmall</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/MonoWhip</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
+      <FactionMaxCount>0</FactionMaxCount>
+      <AllowedForNPC>true</AllowedForNPC>
+      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForUnowned>true</AllowedForUnowned>
+      <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
+      <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
+      <AllowedForUnownedStaticOnly>false</AllowedForUnownedStaticOnly>
+    </SerializableBlockSetting>
+    <SerializableBlockSetting>
+      <Type>MyObjectBuilder_ConveyorSorter/MonoWhipSmall</Type>
+      <PlayerMaxCount>0</PlayerMaxCount>
+      <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
       <AllowedForPlayer>true</AllowedForPlayer>
