remove inert hakkeros

--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -8593,7 +8593,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -8605,7 +8605,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -9253,7 +9253,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -9265,7 +9265,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -9985,7 +9985,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -9997,7 +9997,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10009,7 +10009,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10021,7 +10021,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
