restrict many unused things to clean up ui

--- a/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
+++ b/Storage/2995125400.sbm_BlockRestrictions/BlockRestrictions.cfg
@@ -4249,7 +4249,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -4969,7 +4969,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -9349,7 +9349,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10285,7 +10285,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -10393,7 +10393,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11617,7 +11617,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11641,7 +11641,7 @@
       <GridMaxCount>1</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11665,7 +11665,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -11677,7 +11677,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -13405,7 +13405,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14401,7 +14401,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14413,7 +14413,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14425,7 +14425,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14437,7 +14437,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14449,7 +14449,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
@@ -14461,7 +14461,7 @@
       <GridMaxCount>0</GridMaxCount>
       <FactionMaxCount>0</FactionMaxCount>
       <AllowedForNPC>true</AllowedForNPC>
-      <AllowedForPlayer>true</AllowedForPlayer>
+      <AllowedForPlayer>false</AllowedForPlayer>
       <AllowedForUnowned>true</AllowedForUnowned>
       <AllowedForNPCStaticOnly>false</AllowedForNPCStaticOnly>
       <AllowedForPlayerStaticOnly>false</AllowedForPlayerStaticOnly>
